add account show

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,4 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+ <h1><%= @account.owner %></h1>
+
+
+<h2>Ballance: $<%= @account.balance %></h2>
+
+
+
+
 <%= link_to 'Edit', edit_account_path(@account) %> |
 <%= link_to 'Back', accounts_path %>
