update Rails_admin, add accounts form.

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -2,6 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  	<%= f.association :user, label_method: :fullName%>
+  	<%= f.input :balance %>
   </div>
 
   <div class="form-actions">
