--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false">
   <ul class="title-area">
     <li class="name">
-      <h1><%= link_to "Fahr", root_path %></h1>
+      <h1><%= link_to "Eagle Bank", root_path %></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -56,7 +56,8 @@
 
     <!-- Left Nav Section -->
     <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
+      <li><%= link_to "Accounts", accounts_path %></li>
+      <li><%= link_to "Transactions", transactions_path %></li>
     </ul>
   </section>
 </nav>
