create transaction/account association

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -5,7 +5,32 @@
 
 <h2>Ballance: $<%= @account.balance %></h2>
 
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+     
+    </tr>
+  </thead>
 
+  <tbody>
+    <% Transaction.where(account_id: @account.id ).each do |transaction| %>
+      <tr>
+        <td><%= transaction.name %></td>
+        <td><%= transaction.amount %></td>
+        <td><%= transaction.account.owner %> (#<%= transaction.account.id %>)</td>
+        <td><%= link_to 'Show', transaction %></td>
+        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
+        <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_account_path(@account) %> |
 <%= link_to 'Back', accounts_path %>
