--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,10 +2,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+ 
   	<%= f.input :name %>
   	<%= f.input :amount %>
-  	<%= f.association :account, label_method: :owner%>
-  	
+  	 <%= f.association :account, label_method: :owner, :prompt => "Choose an Account" %>
+
   </div>
 
   <div class="form-actions">
