--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @transaction.name %></h1>
+<h1><%= @transaction.account_id %></h1>
 
 <%= link_to 'Edit', edit_transaction_path(@transaction) %> |
 <%= link_to 'Back', transactions_path %>
