add transaction adding system. Update Rails

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-  	<%= f.association :user, label_method: :fullName%>
-  	<%= f.input :balance %>
+  	<%= f.association :user, label_method: :fname %>
+  	
   </div>
 
   <div class="form-actions">
