--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -3,7 +3,7 @@
  <h1><%= @account.owner %></h1>
 
 
-<h2>Ballance: <%= number_to_currency(@account.balance, :unit => "$", :precision => 2) %></h2>
+<h2>Balance: <%= number_to_currency(@account.balance, :unit => "$", :precision => 2) %></h2>
 
 <h3>Transactions</h3>
 <table>
