--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -6,7 +6,7 @@
       <th>Description</th>
       <th>Amount</th>
       <th>Account</th>
-      
+      <th></th>
      
     </tr>
   </thead>
@@ -17,6 +17,7 @@
         <td><%= link_to transaction.name, transaction %></td>
         <td><%= number_to_currency(transaction.amount, :unit => "$", :precision => 2) %></td>
         <td><%= link_to transaction.account.owner, transaction_path(transaction.id) %></td>   
+        <td><%= link_to 'Edit', edit_transaction_path(transaction), :class => "button small" %> </td>
       </tr>
     <% end %>
   </tbody>
