get things going

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,10 +7,10 @@
   <%= f.email_field :email, :autofocus => true %></div>
 
   <div><%= f.label :first_name %><br />
-  <%= f.email_field :fname %></div> 
+  <%= f.text_field :fname %></div> 
 
   <div><%= f.label :last_Name %><br />
-  <%= f.email_field :lname %></div>  
+  <%= f.text_field :lname %></div>  
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
